--- a/src/config.local.neon.template
+++ b/src/config.local.neon.template
@@ -4,4 +4,4 @@ parameters:
 
 services:
     # Send notification to Mattermost
-    #- App\Mattermost\MattermostWebHook('https://mattermost.my-company.net/hooks/xxx')
+    #- App\Event\Subscriber\SendNotification\MattermostWebHook('https://mattermost.my-company.net/hooks/xxx')
