--- a/src/config.neon
+++ b/src/config.neon
@@ -1,3 +1,6 @@
+parameters:
+    logFilename: %appDir%/../log/drive-tester.log
+
 services:
     ProcessFactory: App\Process\ProcessFactory
     - App\Command\BadblocksCommand(@ProcessFactory)
@@ -10,8 +13,6 @@ services:
     - App\Drive\DriveFactory
     - App\Checker\CheckerFactory
     - App\Checker\SharedStatusCache
-
-    - App\Event\Subscriber\StoreProcessOutput\FileStorage(%storeDir%)
 
     - App\Console\Drive\ListCommand
     - App\Console\Drive\TestCommand
