#9 - changed drive detection

--- a/tests/Command/DriveDiscoveryCommand_DetectDrives.ini
+++ b/tests/Command/DriveDiscoveryCommand_DetectDrives.ini
@@ -4,58 +4,26 @@ drives[]=/dev/sdc
 drives[]=/dev/sdaa
 
 output="
-Disk /dev/sda: 111.8 GiB, 120034123776 bytes, 234441648 sectors
-Units: sectors of 1 * 512 = 512 bytes
-Sector size (logical/physical): 512 bytes / 4096 bytes
-I/O size (minimum/optimal): 4096 bytes / 4096 bytes
-Disklabel type: dos
-Disk identifier: 0x08a66aaa
-
-Device     Boot Start      End  Sectors  Size Id Type
-/dev/sda1  *     2048 19531775 19529728  9.3G 83 Linux
-
-
-Disk /dev/sdc: 465.8 GiB, 500107862016 bytes, 976773168 sectors
-Units: sectors of 1 * 512 = 512 bytes
-Sector size (logical/physical): 512 bytes / 4096 bytes
-I/O size (minimum/optimal): 4096 bytes / 4096 bytes
-Disklabel type: dos
-Disk identifier: 0x13367e3f
-
-Device     Boot    Start       End   Sectors  Size Id Type
-/dev/sdc1  *        2048  19531775  19529728  9.3G fd Linux raid autodetect
-/dev/sdc2       19531776 156250111 136718336 65.2G fd Linux raid autodetect
-
-
-Disk /dev/sdaa: 465.8 GiB, 500107862016 bytes, 976773168 sectors
-Units: sectors of 1 * 512 = 512 bytes
-Sector size (logical/physical): 512 bytes / 4096 bytes
-I/O size (minimum/optimal): 4096 bytes / 4096 bytes
-Disklabel type: dos
-Disk identifier: 0xe3b2f5e2
-
-Device     Boot    Start       End   Sectors  Size Id Type
-/dev/sdaa1           2048  19531775  19529728  9.3G fd Linux raid autodetect
-/dev/sdaa2       19531776 156250111 136718336 65.2G fd Linux raid autodetect
+/dev/sda
+/dev/sda1
+/dev/sda2
+/dev/sda3
+/dev/sda4
+/dev/sdc
+/dev/sdc1
+/dev/sdaa
+/dev/sdaa1
+/dev/sdaa2
 "
 
 [two]
 drives[]=/dev/sda
 output="
-Disk /dev/sda: 232,9 GiB, 250059350016 bytes, 488397168 sectors
-Units: sectors of 1 * 512 = 512 bytes
-Sector size (logical/physical): 512 bytes / 512 bytes
-I/O size (minimum/optimal): 512 bytes / 512 bytes
-Disklabel type: gpt
-Disk identifier: F1087428-797E-450A-A8D0-A15CF0AEB461
-
-Zařízení       Start     Konec   Sektory  Size Druh
-/dev/sda1       2048   1050623   1048576  512M EFI System
-/dev/sda2    1050624 157300623 156250000 74,5G Linux filesystem
-/dev/sda3  480360448 488396799   8036352  3,9G Linux swap
-/dev/sda4  157300736 480360447 323059712  154G Linux filesystem
-
-Partition table entries are not in disk order.
+/dev/sda
+/dev/sda1
+/dev/sda2
+/dev/sda3
+/dev/sda4
 "
 
 [error]
